# personal-finance-analysis

./: CLAUDE.md  DEPENDENCY_ISSUES.md  README.md  README_USAGE.md  docling-requirements.txt  ollama.md  pyproject.toml  readme.md  requirements.txt
scripts/: chat_with_docs.py  chunk_documents.py  embedding_models.py  generate_embeddings.py  pdf_to_markdown.py  query_embeddings.py  run_full_pipeline.py
