[project]
name = "docling-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
#requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "filetype>=1.2.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
]
requires-python = ">=3.9,<3.13"
